--- a/GUI/asr-attack/package.json
+++ b/GUI/asr-attack/package.json
@@ -17,7 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject","electron": "concurrently \"SET BROWSER=none&&npm run start\" \"wait-on http://localhost:3000 && electron .\"",
+    "eject": "react-scripts eject",
     "electron": "concurrently \"SET BROWSER=none&&npm run start\" \"wait-on http://localhost:3000 && electron .\"",
     "electron-dev": "concurrently \"SET BROWSER=none&&npm run start\" \"wait-on http://localhost:3000 && electron .\""
   },
@@ -44,6 +44,7 @@
     "concurrently": "^8.2.2",
     "electron": "^28.0.0",
     "electron-is-dev": "^2.0.0",
+    "video.js": "^8.6.1",
     "wait-on": "^7.2.0"
   }
 }
